<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ly_peliculas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Peliculas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/btn_Peliculas"

                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ly_BaseDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ly_peliculas"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_BaseDatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/btn_BD"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ly_BaseDatos"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_Firebase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/btn_Firestore"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_fotos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ly_ubicacion"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_fotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/btn_Fotos"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_mapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ly_fotos"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_mapa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/btn_Mapa"

                />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>